results/SVCOMP/2-shot/log-aastore_aaload1-2024_03_18_21_32_32.txt
import java.util.Random;

public class aastore_aaload1 {
    static class A {
        int value = 0;
    }

    //@ requires true;
    //@ ensures (\forall int i; 0 <= i && i < size; array[i] != null);
    public static void main(String[] args) {
        int size = new Random().nextInt();
        if (size < 0) return;
        A[] array = new A[size];

        //@ maintaining 0 <= i && i <= size;
        //@ maintaining (\forall int j; 0 <= j && j < i; array[j] != null);
        for (int i = 0; i < size; i++) {
            array[i] = new A();
        }
        
        //@ maintaining 0 <= i && i <= size;
        //@ maintaining (\forall int j; 0 <= j && j < i; array[j] != null);
        for (int i = 0; i < size; i++) {
            assert array[i] != null;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/aastore_aaload1.java:9: error: cannot find symbol
    //@ ensures (\forall int i; 0 <= i && i < size; array[i] != null);
                                              ^
  symbol:   variable size
  location: class aastore_aaload1
/home/max/Documents/JMLGPT/tmp/aastore_aaload1.java:9: error: cannot find symbol
    //@ ensures (\forall int i; 0 <= i && i < size; array[i] != null);
                                                    ^
  symbol:   variable array
  location: class aastore_aaload1
2 errors

